--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_executable(mfti_2B mfti_2B.cpp)
 add_executable(mfti_2C mfti_2C.cpp)
 add_executable(mfti_3A mfti_3A.cpp)
 add_executable(mfti_3C mfti_3C.cpp)
+add_executable(mfti_3B mfti_3B.cpp)
