--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(mfti_2C mfti_2C.cpp)
 add_executable(mfti_3A mfti_3A.cpp)
 add_executable(mfti_3C mfti_3C.cpp)
 add_executable(mfti_3B mfti_3B.cpp)
+add_executable(mfti_4A mfti_4A.cpp)
