--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(mfti_3A mfti_3A.cpp)
 add_executable(mfti_3C mfti_3C.cpp)
 add_executable(mfti_3B mfti_3B.cpp)
 add_executable(mfti_4A mfti_4A.cpp)
+add_executable(mfti_4B mfti_4B.cpp)
