--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ add_executable(mfti_3B mfti_3B.cpp)
 add_executable(mfti_4A mfti_4A.cpp)
 add_executable(mfti_4B mfti_4B.cpp)
 add_executable(mfti_4C mfti_4C.cpp)
+add_executable(mfti_4D mfti_4D.cpp)
