--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(mfti_4A mfti_4A.cpp)
 add_executable(mfti_4B mfti_4B.cpp)
 add_executable(mfti_4C mfti_4C.cpp)
 add_executable(mfti_4D mfti_4D.cpp)
+add_executable(mfti_olimpA mfti_olimpA.cpp)
+add_executable(mfti_olimpC mfti_olimpB.cpp)
