--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(mfti_4C mfti_4C.cpp)
 add_executable(mfti_4D mfti_4D.cpp)
 add_executable(mfti_olimpA mfti_olimpA.cpp)
 add_executable(mfti_olimpC mfti_olimpB.cpp)
+add_executable(mfti_5A mfti_5A.cpp)
