--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ add_executable(mfti_4D mfti_4D.cpp)
 add_executable(mfti_olimpA mfti_olimpA.cpp)
 add_executable(mfti_olimpC mfti_olimpB.cpp)
 add_executable(mfti_5A mfti_5A.cpp)
+add_executable(mfti_6A mfti_6A.cpp)
+add_executable(mfti_6B mfti_6B.cpp)
