--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_executable(mfti_olimpC mfti_olimpB.cpp)
 add_executable(mfti_5A mfti_5A.cpp)
 add_executable(mfti_6A mfti_6A.cpp)
 add_executable(mfti_6B mfti_6B.cpp)
+add_executable(mfti_7C mfti_7C.cpp)
