--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_executable(mfti_5A mfti_5A.cpp)
 add_executable(mfti_6A mfti_6A.cpp)
 add_executable(mfti_6B mfti_6B.cpp)
 add_executable(mfti_7C mfti_7C.cpp)
+add_executable(mfti_5B mfti_5B.cpp)
