--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,7 @@ add_executable(mfti_6A mfti_6A.cpp)
 add_executable(mfti_6B mfti_6B.cpp)
 add_executable(mfti_7C mfti_7C.cpp)
 add_executable(mfti_5B mfti_5B.cpp)
+add_executable(mfti_olimpteamA mfti_olimpteamA.cpp)
+add_executable(mfti_olimpteamC mfti_olimpteamC.cpp)
+add_executable(mfti_olimpteamI mfti_olimpteamI.cpp)
+add_executable(mfti_olimpteamH mfti_olimpteamH.cpp)
