--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,28 +3,32 @@ project(mfti)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(mfti mfti_2B.cpp)
-add_executable(mfti_1A mfti_1A.cpp)
-add_executable(mfti_1B mfti_1B.cpp)
-add_executable(mfti_1C mfti_1C.cpp)
-add_executable(mfti_2A mfti_2A.cpp)
-add_executable(mfti_2B mfti_2B.cpp)
-add_executable(mfti_2C mfti_2C.cpp)
-add_executable(mfti_3A mfti_3A.cpp)
-add_executable(mfti_3C mfti_3C.cpp)
-add_executable(mfti_3B mfti_3B.cpp)
-add_executable(mfti_4A mfti_4A.cpp)
-add_executable(mfti_4B mfti_4B.cpp)
-add_executable(mfti_4C mfti_4C.cpp)
-add_executable(mfti_4D mfti_4D.cpp)
-add_executable(mfti_olimpA mfti_olimpA.cpp)
-add_executable(mfti_olimpC mfti_olimpB.cpp)
-add_executable(mfti_5A mfti_5A.cpp)
-add_executable(mfti_6A mfti_6A.cpp)
-add_executable(mfti_6B mfti_6B.cpp)
-add_executable(mfti_7C mfti_7C.cpp)
-add_executable(mfti_5B mfti_5B.cpp)
-add_executable(mfti_olimpteamA mfti_olimpteamA.cpp)
-add_executable(mfti_olimpteamC mfti_olimpteamC.cpp)
-add_executable(mfti_olimpteamI mfti_olimpteamI.cpp)
-add_executable(mfti_olimpteamH mfti_olimpteamH.cpp)
+add_executable(mfti LOSH1/mfti_2B.cpp)
+add_executable(mfti_1A LOSH1/mfti_1A.cpp)
+add_executable(mfti_1B LOSH1/mfti_1B.cpp)
+add_executable(mfti_1C LOSH1/mfti_1C.cpp)
+add_executable(mfti_2A LOSH1/mfti_2A.cpp)
+add_executable(mfti_2B LOSH1/mfti_2B.cpp)
+add_executable(mfti_2C LOSH1/mfti_2C.cpp)
+add_executable(mfti_3A LOSH1/mfti_3A.cpp)
+add_executable(mfti_3C LOSH1/mfti_3C.cpp)
+add_executable(mfti_3B LOSH1/mfti_3B.cpp)
+add_executable(mfti_4A LOSH1/mfti_4A.cpp)
+add_executable(mfti_4B LOSH1/mfti_4B.cpp)
+add_executable(mfti_4C LOSH1/mfti_4C.cpp)
+add_executable(mfti_4D LOSH1/mfti_4D.cpp)
+add_executable(mfti_olimpA LOSH1/mfti_olimpA.cpp)
+add_executable(mfti_olimpC LOSH1/mfti_olimpB.cpp)
+add_executable(mfti_5A LOSH1/mfti_5A.cpp)
+add_executable(mfti_6A LOSH1/mfti_6A.cpp)
+add_executable(mfti_6B LOSH1/mfti_6B.cpp)
+add_executable(mfti_7C LOSH1/mfti_7C.cpp)
+add_executable(mfti_5B LOSH1/mfti_5B.cpp)
+add_executable(mfti_olimpteamA LOSH1/mfti_olimpteamA.cpp)
+add_executable(mfti_olimpteamC LOSH1/mfti_olimpteamC.cpp)
+add_executable(mfti_olimpteamI LOSH1/mfti_olimpteamI.cpp)
+add_executable(mfti_olimpteamH LOSH1/mfti_olimpteamH.cpp)
+add_executable(iii ZOSH1/iii.cpp)
+add_executable(ZOSH_1A ZOSH1/ZOSH_1A.cpp)
+add_executable(ZOSH_1H ZOSH1/ZOSH_1H.cpp)
+add_executable(ZOSH_1B ZOSH1/ZOSH_1B.cpp)
