fuk i'm too tiered.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,5 @@ add_executable(iii ZOSH1/iii.cpp)
 add_executable(ZOSH_1A ZOSH1/ZOSH_1A.cpp)
 add_executable(ZOSH_1H ZOSH1/ZOSH_1H.cpp)
 add_executable(ZOSH_1B ZOSH1/ZOSH_1B.cpp)
+add_executable(ZOSH_2F ZOSH1/ZOSH_2F.cpp)
+add_executable(ZOSH_2A ZOSH1/ZOSH_2A.cpp)
