--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ add_executable(ZOSH_1H ZOSH1/ZOSH_1H.cpp)
 add_executable(ZOSH_1B ZOSH1/ZOSH_1B.cpp)
 add_executable(ZOSH_2F ZOSH1/ZOSH_2F.cpp)
 add_executable(ZOSH_2A ZOSH1/ZOSH_2A.cpp)
+add_executable(ZOSH_2H ZOSH1/ZOSH_2H.cpp)
