eee i slap 4 hours

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,7 @@ add_executable(ZOSH_1B ZOSH1/ZOSH_1B.cpp)
 add_executable(ZOSH_2F ZOSH1/ZOSH_2F.cpp)
 add_executable(ZOSH_2A ZOSH1/ZOSH_2A.cpp)
 add_executable(ZOSH_2H ZOSH1/ZOSH_2H.cpp)
+add_executable(ZOSH_2D ZOSH1/ZOSH_2D.cpp)
+add_executable(ZOSH_3A ZOSH1/ZOSH_3A.cpp)
+add_executable(ZOSH_3B ZOSH1/ZOSH_3B.cpp)
+add_executable(ZOSH_3D ZOSH1/ZOSH_3D.cpp)
