--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,11 @@ add_executable(ZOSH_2D ZOSH1/ZOSH_2D.cpp)
 add_executable(ZOSH_3A ZOSH1/ZOSH_3A.cpp)
 add_executable(ZOSH_3B ZOSH1/ZOSH_3B.cpp)
 add_executable(ZOSH_3D ZOSH1/ZOSH_3D.cpp)
+add_executable(ZOSH_3F ZOSH1/ZOSH_3F.cpp)
+add_executable(ZOSHoLIMP_A ZOSH1/ZOSHoLIMP_A.cpp)
+add_executable(ZOSHoLIMP_B ZOSH1/ZOSHoLIMP_B.cpp)
+add_executable(ZOSHoLIMP_C ZOSH1/ZOSHoLIMP_C.cpp)
+add_executable(ZOSHoLIMP_D ZOSH1/ZOSHoLIMP_D.cpp)
+add_executable(ZOSHoLIMP_F ZOSH1/ZOSHoLIMP_F.cpp)
+add_executable(ZOSHoLIMP_G ZOSH1/ZOSHoLIMP_G.cpp)
+add_executable(ZOSHoLIMP_E ZOSH1/ZOSHoLIMP_E.cpp)
