2 days left yaaaa

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,7 @@ add_executable(ZOSHoLIMP_D ZOSH1/ZOSHoLIMP_D.cpp)
 add_executable(ZOSHoLIMP_F ZOSH1/ZOSHoLIMP_F.cpp)
 add_executable(ZOSHoLIMP_G ZOSH1/ZOSHoLIMP_G.cpp)
 add_executable(ZOSHoLIMP_E ZOSH1/ZOSHoLIMP_E.cpp)
+add_executable(ZOSH_2E ZOSH1/ZOSH_2E.cpp)
+add_executable(ZOSH_4A ZOSH1/ZOSH_4A.cpp)
+add_executable(ZOSH_4C ZOSH1/ZOSH_4C.cpp)
+add_executable(ZOSH_4B ZOSH1/ZOSH_4B.cpp)
