--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,4 @@ add_executable(ZOSH_4A ZOSH1/ZOSH_4A.cpp)
 add_executable(ZOSH_4C ZOSH1/ZOSH_4C.cpp)
 add_executable(ZOSH_4B ZOSH1/ZOSH_4B.cpp)
 add_executable(ZOSH_4E ZOSH1/ZOSH_4E.cpp)
+add_executable(ZOSH_4D ZOSH1/ZOSH_4D.cpp)
