it's 2 o'clock? fuk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,6 @@ add_executable(mfti_olimpteamA LOSH1/mfti_olimpteamA.cpp)
 add_executable(mfti_olimpteamC LOSH1/mfti_olimpteamC.cpp)
 add_executable(mfti_olimpteamI LOSH1/mfti_olimpteamI.cpp)
 add_executable(mfti_olimpteamH LOSH1/mfti_olimpteamH.cpp)
-add_executable(iii ZOSH1/iii.cpp)
 add_executable(ZOSH_1A ZOSH1/ZOSH_1A.cpp)
 add_executable(ZOSH_1H ZOSH1/ZOSH_1H.cpp)
 add_executable(ZOSH_1B ZOSH1/ZOSH_1B.cpp)
@@ -53,3 +52,10 @@ add_executable(ZOSH_4C ZOSH1/ZOSH_4C.cpp)
 add_executable(ZOSH_4B ZOSH1/ZOSH_4B.cpp)
 add_executable(ZOSH_4E ZOSH1/ZOSH_4E.cpp)
 add_executable(ZOSH_4D ZOSH1/ZOSH_4D.cpp)
+add_executable(ZOSH_5H ZOSH1/ZOSH_5H.cpp)
+add_executable(ZOSH_5B ZOSH1/ZOSH_5B.cpp)
+add_executable(ZOSH_5G ZOSH1/ZOSH_5G.cpp)
+add_executable(ZOSH_5C ZOSH1/ZOSH_5C.cpp)
+add_executable(ZOSH_5J ZOSH1/ZOSH_5J.cpp)
+add_executable(ZOSH_5I ZOSH1/ZOSH_5I.cpp)
+add_executable(test ZOSH1/ONLYforTESTING.cpp)
