--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,3 +59,15 @@ add_executable(ZOSH_5C ZOSH1/ZOSH_5C.cpp)
 add_executable(ZOSH_5J ZOSH1/ZOSH_5J.cpp)
 add_executable(ZOSH_5I ZOSH1/ZOSH_5I.cpp)
 add_executable(test ZOSH1/ONLYforTESTING.cpp)
+add_executable(ZOSH_6B ZOSH1/ZOSH_6B.cpp)
+add_executable(ZOSH_6A ZOSH1/ZOSH_6A.cpp)
+add_executable(ZOSH_I3 ZOSH1/ZOSH_I3.cpp)
+add_executable(ZOSH_3C ZOSH1/ZOSH_3C.cpp)
+add_executable(ZOSH_6D ZOSH1/ZOSH_6D.cpp)
+add_executable(ZOSH_TeamOlimpA ZOSH1/ZOSH_TeamOlimpA.cpp)
+add_executable(ZOSH_TeamOlimpB ZOSH1/ZOSH_TeamOlimpB.cpp)
+add_executable(ZOSH_TeamOlimpC ZOSH1/ZOSH_TeamOlimpC.cpp)
+add_executable(ZOSH_TeamOlimpD ZOSH1/ZOSH_TeamOlimpD.cpp)
+add_executable(ZOSH_TeamOlimpE ZOSH1/ZOSH_TeamOlimpE.cpp)
+add_executable(ZOSH_TeamOlimpH ZOSH1/ZOSH_TeamOlimpH.cpp)
+add_executable(ZOSH_TeamOlimpG ZOSH1/ZOSH_TeamOlimpG.cpp)
