--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,8 @@ add_executable(Test_lOSH2A testLosh2/testLosh2A.cpp)
 add_executable(Test_lOSH2B testLosh2/testLosh2B.cpp)
 add_executable(Test_lOSH2C testLosh2/_testLosh2C.cpp)
 add_executable(Test_lOSH2D testLosh2/_testLosh2D.cpp)
+add_executable(LOSH2_1A LOSH2/LOSH2_1A.cpp)
+add_executable(LOSH2_1B LOSH2/LOSH2_1B.cpp)
+add_executable(LOSH2_1F LOSH2/LOSH2_1F.cpp)
+add_executable(LOSH2_2A LOSH2/LOSH2_2A.cpp)
+add_executable(LOSH2_2B LOSH2/LOSH2_2B.cpp)
